add fonts, styles, images folders

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Homework. Learning the basics of HTML for beginners"
+    />
+    <title>Portfolio</title>
+    <!-- export google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- add styles -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- HEADER -->
+    <header class="page-header">
+      <nav class="page-navigation">
+        <a href="./index.html" class="logo">,<span>Web</span>Studio</a>
+        <ul class="menu list">
+          <li class="menu-item">
+            <a class="menu-link link" href="#" rel="noopener noreferrer"
+              >Studio</a
+            >
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="#" rel="noopener noreferrer"
+              >Portfolio</a
+            >
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="#" rel="noopener noreferrer"
+              >Contacts</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <address>
+        <ul class="address-list list">
+          <li class="address-list-item">
+            <a class="address-list-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="address-list-item">
+            <a class="address-list-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
+    </header>
+    <!-- MAIN -->
+  </body>
 </html>
