--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
       content="Homework. Learning the basics of HTML for beginners"
     />
     <title>Web Studio</title>
+    <!-- export google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- add styles -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- HEADER -->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html"><span>Web</span>Studio</a>
         <ul>
           <li><a href="#" rel="noopener noreferrer">Studio</a></li>
           <li><a href="#" rel="noopener noreferrer">Portfolio</a></li>
@@ -145,7 +153,7 @@
     </main>
     <!-- FOOTER -->
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html"><span>Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
