--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Homework. Learning the basics of HTML for beginners"
     />
-    <title>Web Studio</title>
+    <title>Studio</title>
     <!-- export google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,144 +20,195 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header>
-      <nav>
-        <a href="./index.html"><span>Web</span>Studio</a>
-        <ul>
-          <li><a href="#" rel="noopener noreferrer">Studio</a></li>
-          <li><a href="#" rel="noopener noreferrer">Portfolio</a></li>
-          <li><a href="#" rel="noopener noreferrer">Contacts</a></li>
+    <header class="page-header">
+      <nav class="page-navigation">
+        <a href="./index.html" class="page-header-logo link"
+          ><span>Web</span>Studio</a
+        >
+        <ul class="menu list">
+          <li class="menu-item">
+            <a
+              class="menu-link link"
+              href="./index.html"
+              rel="noopener noreferrer"
+              >Studio</a
+            >
+          </li>
+          <li class="menu-item">
+            <a
+              class="menu-link link"
+              href="./portfolio.html"
+              rel="noopener noreferrer"
+              >Portfolio</a
+            >
+          </li>
+          <li class="menu-item">
+            <a class="menu-link link" href="#" rel="noopener noreferrer"
+              >Contacts</a
+            >
+          </li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="address-list list">
+          <li class="address-list-item">
+            <a
+              class="address-list-link link"
+              href="mailto:info@devstudio.com"
+              rel="noopener noreferrer"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="address-list-item">
+            <a
+              class="address-list-link link"
+              href="tel:+110001111111"
+              rel="noopener noreferrer"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
+    <!-- /HEADER -->
     <!-- MAIN -->
     <main>
       <!-- HERO -->
       <section class="hero">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="hero-header">Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
+      <!-- /HERO -->
       <!-- FEATURES -->
       <section class="features">
         <h2 hidden>Features</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <ul class="features-list list">
+          <li class="features-list-item">
+            <h3 class="features-item-header">Strategy</h3>
+            <p class="features-item-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="features-list-item">
+            <h3 class="features-item-header">Punctuality</h3>
+            <p class="features-item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="features-list-item">
+            <h3 class="features-item-header">Diligence</h3>
+            <p class="features-item-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="features-list-item">
+            <h3 class="features-item-header">Technologies</h3>
+            <p class="features-item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
+      <!-- /FEATURES -->
       <!-- SERVICES -->
       <section class="services">
-        <h2>What are we doing</h2>
+        <h2 class="services-header">What are we doing</h2>
 
-        <ul>
-          <li>
+        <ul class="services-list list">
+          <li class="services-item">
             <img
-              src="./images/img1.jpg"
+              src="./images/1.services/img1.jpg"
               alt="desktop app"
               width="360"
               height="300"
+              class="services-item-img"
             />
           </li>
-          <li>
+          <li class="services-item">
             <img
-              src="./images/img2.jpg"
+              src="./images/1.services/img2.jpg"
               alt="mobile app"
               width="360"
               height="300"
+              class="services-item-img"
             />
           </li>
-          <li>
+          <li class="services-item">
             <img
-              src="./images/img3.jpg"
+              src="./images/1.services/img3.jpg"
               alt="webdesign"
               width="360"
               height="300"
+              class="services-item-img"
             />
           </li>
         </ul>
       </section>
+      <!-- /SERVICES -->
       <!-- TEAM -->
       <section class="team">
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+        <h2 class="team-header">Our Team</h2>
+        <ul class="team-list list">
+          <li class="team-item">
             <img
-              src="./images/img_product-designer.jpg"
+              class="team-item-img"
+              src="./images/2.team/img1-product-designer.jpg"
               alt="photo of the product designer"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-item-header">Mark Guerrero</h3>
+            <p class="team-item-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
-              src="./images/img_frontend-developer.jpg"
+              class="team-item-img"
+              src="./images/2.team/img2-frontend-developer.jpg"
               alt="photo of the frontend developer"
               width="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-item-header">Tom Ford</h3>
+            <p class="team-item-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
-              src="./images/img_marketing.jpg"
+              class="team-item-img"
+              src="./images/2.team/img3-marketing.jpg"
               alt="photo of the marketing specialist"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-item-header">Camila Garcia</h3>
+            <p class="team-item-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
-              src="./images/img_ui-designer.jpg"
+              class="team-item-img"
+              src="./images/2.team/img4-ui-designer.jpg"
               alt="photo of the ui designer"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-item-header">Daniel Wilson</h3>
+            <p class="team-item-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
+    <!-- /TEAM -->
+    <!-- /MAIN -->
+
     <!-- FOOTER -->
-    <footer>
-      <a href="./index.html"><span>Web</span>Studio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-logo link" href="./index.html" rel="noopener noreferrer"
+        ><span>Web</span>Studio</a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
+    <!-- /FOOTER -->
   </body>
 </html>
