--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <header class="page-header">
       <nav class="page-navigation">
-        <a class="page-header-logo link" href="./index.html" rel="noopener noreferrer"><span>Web</span>Studio</a>
+        <a class="logo link" href="./index.html" rel="noopener noreferrer"><span>Web</span>Studio</a>
         <ul class="menu list">
           <li class="menu-item">
             <a class="menu-link link" href="./index.html" rel="noopener noreferrer">Studio</a>
@@ -142,7 +142,7 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html" rel="noopener noreferrer"><span>Web</span>Studio</a>
+      <a class="logo link" href="./index.html" rel="noopener noreferrer"><span>Web</span>Studio</a>
       <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
