--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <header class="page-header">
       <nav class="page-navigation">
-        <a class="logo link" href="./index.html" rel="noopener noreferrer"><span>Web</span>Studio</a>
+        <a class="logo link" href="./index.html" rel="noopener noreferrer">Web<span class="header-logo-span">Studio</span></a>
         <ul class="menu list">
           <li class="menu-item">
             <a class="menu-link link" href="./index.html" rel="noopener noreferrer">Studio</a>
@@ -25,7 +25,7 @@
             <a class="menu-link link" href="./portfolio.html" rel="noopener noreferrer">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="#" rel="noopener noreferrer">Contacts</a>
+            <a class="menu-link link" href="" rel="noopener noreferrer">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -45,10 +45,8 @@
     <main class="main">
       <!-- HERO -->
       <section class="hero">
-        <div class="hero-cta">
-          <h1 class="hero-header">Effective Solutions for Your Business</h1>
-          <button class="hero-button" type="button">Order Service</button>
-        </div>
+        <h1 class="hero-header">Effective Solutions for Your Business</h1>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
       <!-- /HERO -->
       <!-- FEATURES -->
@@ -123,7 +121,7 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-      <a class="logo link" href="./index.html" rel="noopener noreferrer"><span>Web</span>Studio</a>
+      <a class="logo link" href="./index.html" rel="noopener noreferrer">Web<span class="footer-logo-span">Studio</span></a>
       <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     <!-- /FOOTER -->
