--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <header class="page-header">
       <nav class="page-navigation">
-        <a class="logo link" href="./index.html" rel="noopener noreferrer"><span>Web</span>Studio</a>
+        <a class="logo link" href="./index.html" rel="noopener noreferrer">Web<span class="header-logo-span">Studio</span></a>
         <ul class="menu list">
           <li class="menu-item">
             <a class="menu-link link" href="./index.html" rel="noopener noreferrer">Studio</a>
@@ -25,7 +25,7 @@
             <a class="menu-link link" href="./portfolio.html" rel="noopener noreferrer">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="#" rel="noopener noreferrer">Contacts</a>
+            <a class="menu-link link" href="" rel="noopener noreferrer">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -46,7 +46,8 @@
     <main class="main">
       <!-- PORTFOLIO -->
       <section class="portfolio">
-        <h2 class="portfolio-header" hidden>portfolio</h2>
+        <h1 class="portfolio-header" hidden>portfolio</h1>
+        <!-- Portfolio filters -->
         <ul class="portfolio-filters list">
           <li class="portfolio-filter">
             <button class="portfolio-filter-btn" type="button">All</button>
@@ -64,77 +65,54 @@
             <button class="portfolio-filter-btn" type="button">Marketing</button>
           </li>
         </ul>
-        <div class="portfolio-container">
-          <ul class="portfolio-list list">
-            <li class="portfolio-card">
-              <img class="portfolio-card-img" src="./images/3.portfolio/img-1-bank-app.jpg" alt="bank app" width="360" height="300" />
-              <div class="portfolio-card-content">
-                <h3 class="portfolio-card-header">Banking App Interface Concept</h3>
-                <p class="portfolio-card-text">App</p>
-              </div>
-            </li>
-            <li class="portfolio-card">
-              <img class="portfolio-card-img" src="./images/3.portfolio/img-2-cashless-payment.jpg" alt="appication for cashless payment" width="360" height="300" />
-              <div class="portfolio-card-content">
-                <h3 class="portfolio-card-header">Cashless Payment</h3>
-                <p class="portfolio-card-text">Marketing</p>
-              </div>
-            </li>
-            <li class="portfolio-card">
-              <img class="portfolio-card-img" src="./images/3.portfolio/img-3-meditation-app.jpg" alt="meditation app" width="360" height="300" />
-              <div class="portfolio-card-content">
-                <h3 class="portfolio-card-header">Meditation App</h3>
-                <p class="portfolio-card-text">App</p>
-              </div>
-            </li>
-          </ul>
-          <ul class="portfolio-list list">
-            <li class="portfolio-card">
-              <img class="portfolio-card-img" src="./images/3.portfolio/img-4-taxi-app.jpg" alt="taxi app" width="360" height="300" />
-              <div class="portfolio-card-content">
-                <h3 class="portfolio-card-header">Taxi Service</h3>
-                <p class="portfolio-card-text">Marketing</p>
-              </div>
-            </li>
-            <li class="portfolio-card">
-              <img class="portfolio-card-img" src="./images/3.portfolio/img-5-wallpaper.jpg" alt="wallpapers" width="360" height="300" />
-              <div class="portfolio-card-content">
-                <h3 class="portfolio-card-header">Screen Illustrations</h3>
-                <p class="portfolio-card-text">Design</p>
-              </div>
-            </li>
-            <li class="portfolio-card">
-              <img class="portfolio-card-img" src="./images/3.portfolio/img-6-online-courses.jpg" alt="online courses" width="360" height="300" />
-              <div class="portfolio-card-content">
-                <h3 class="portfolio-card-header">Online Courses</h3>
-                <p class="portfolio-card-text">Marketing</p>
-              </div>
-            </li>
-          </ul>
-          <ul class="portfolio-list list">
-            <li class="portfolio-card">
-              <img class="portfolio-card-img" src="./images/3.portfolio/img-7-instagram-stories.jpg" alt="instagram stories" width="360" height="300" />
-              <div class="portfolio-card-content">
-                <h3 class="portfolio-card-header">Instagram Stories Concept</h3>
-                <p class="portfolio-card-text">Design</p>
-              </div>
-            </li>
-            <li class="portfolio-card">
-              <img class="portfolio-card-img" src="./images/3.portfolio/img-8-website-food.jpg" alt="website organik food" width="360" height="300" />
-              <div class="portfolio-card-content">
-                <h3 class="portfolio-card-header">Organic Food</h3>
-                <p class="portfolio-card-text">Web Site</p>
-              </div>
-            </li>
-            <li class="portfolio-card">
-              <img class="portfolio-card-img" src="./images/3.portfolio/img-9-website-coffee.jpg" alt="website coffee" width="360" height="300" />
-              <div class="portfolio-card-content">
-                <h3 class="portfolio-card-header">Fresh Coffee</h3>
-                <p class="portfolio-card-text">Web Site</p>
-              </div>
-            </li>
-          </ul>
-        </div>
+        <!-- Portfolio cards -->
+        <ul class="portfolio-list list">
+          <a href="" class="portfolio-card link">
+            <img src="./images/3.portfolio/img-1-bank-app.jpg" alt="bank app" width="360" height="300" class="portfolio-card-img" />
+            <h2 class="portfolio-card-header">Banking App Interface Concept</h2>
+            <p class="portfolio-card-text">App</p>
+          </a>
+          <a href="" class="portfolio-card link">
+            <img src="./images/3.portfolio/img-2-cashless-payment.jpg" alt="appication for cashless payment" width="360" height="300" class="portfolio-card-img" />
+            <h2 class="portfolio-card-header">Cashless Payment</h2>
+            <p class="portfolio-card-text">Marketing</p>
+          </a>
+          <a href="" class="portfolio-card link">
+            <img src="./images/3.portfolio/img-3-meditation-app.jpg" alt="meditation app" width="360" height="300" class="portfolio-card-img" />
+            <h2 class="portfolio-card-header">Meditation App</h2>
+            <p class="portfolio-card-text">App</p>
+          </a>
+          <a href="" class="portfolio-card link">
+            <img src="./images/3.portfolio/img-4-taxi-app.jpg" alt="taxi app" width="360" height="300" class="portfolio-card-img" />
+            <h2 class="portfolio-card-header">Taxi Service</h2>
+            <p class="portfolio-card-text">Marketing</p>
+          </a>
+          <a href="" class="portfolio-card link">
+            <img src="./images/3.portfolio/img-5-wallpaper.jpg" alt="wallpapers" width="360" height="300" class="portfolio-card-img" />
+            <h2 class="portfolio-card-header">Screen Illustrations</h2>
+            <p class="portfolio-card-text">Design</p>
+          </a>
+          <a href="" class="portfolio-card link">
+            <img src="./images/3.portfolio/img-6-online-courses.jpg" alt="online courses" width="360" height="300" class="portfolio-card-img" />
+            <h2 class="portfolio-card-header">Online Courses</h2>
+            <p class="portfolio-card-text">Marketing</p>
+          </a>
+          <a href="" class="portfolio-card link">
+            <img src="./images/3.portfolio/img-7-instagram-stories.jpg" alt="instagram stories" width="360" height="300" class="portfolio-card-img" />
+            <h2 class="portfolio-card-header">Instagram Stories Concept</h2>
+            <p class="portfolio-card-text">Design</p>
+          </a>
+          <a href="" class="portfolio-card link">
+            <img src="./images/3.portfolio/img-8-website-food.jpg" alt="website organik food" width="360" height="300" class="portfolio-card-img" />
+            <h2 class="portfolio-card-header">Organic Food</h2>
+            <p class="portfolio-card-text">Web Site</p>
+          </a>
+          <a href="" class="portfolio-card link">
+            <img src="./images/3.portfolio/img-9-website-coffee.jpg" alt="website coffee" width="360" height="300" class="portfolio-card-img" />
+            <h2 class="portfolio-card-header">Fresh Coffee</h2>
+            <p class="portfolio-card-text">Web Site</p>
+          </a>
+        </ul>
       </section>
       <!-- /PORTFOLIO -->
     </main>
@@ -142,7 +120,7 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-      <a class="logo link" href="./index.html" rel="noopener noreferrer"><span>Web</span>Studio</a>
+      <a class="logo link" href="./index.html" rel="noopener noreferrer">Web<span class="footer-logo-span">Studio</span></a>
       <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
