--- a/portfolio.html
+++ b/portfolio.html
@@ -67,51 +67,69 @@
         </ul>
         <!-- Portfolio cards -->
         <ul class="portfolio-list list">
-          <a href="" class="portfolio-card link">
-            <img src="./images/3.portfolio/img-1-bank-app.jpg" alt="bank app" width="360" height="300" class="portfolio-card-img" />
-            <h2 class="portfolio-card-header">Banking App Interface Concept</h2>
-            <p class="portfolio-card-text">App</p>
-          </a>
-          <a href="" class="portfolio-card link">
-            <img src="./images/3.portfolio/img-2-cashless-payment.jpg" alt="appication for cashless payment" width="360" height="300" class="portfolio-card-img" />
-            <h2 class="portfolio-card-header">Cashless Payment</h2>
-            <p class="portfolio-card-text">Marketing</p>
-          </a>
-          <a href="" class="portfolio-card link">
-            <img src="./images/3.portfolio/img-3-meditation-app.jpg" alt="meditation app" width="360" height="300" class="portfolio-card-img" />
-            <h2 class="portfolio-card-header">Meditation App</h2>
-            <p class="portfolio-card-text">App</p>
-          </a>
-          <a href="" class="portfolio-card link">
-            <img src="./images/3.portfolio/img-4-taxi-app.jpg" alt="taxi app" width="360" height="300" class="portfolio-card-img" />
-            <h2 class="portfolio-card-header">Taxi Service</h2>
-            <p class="portfolio-card-text">Marketing</p>
-          </a>
-          <a href="" class="portfolio-card link">
-            <img src="./images/3.portfolio/img-5-wallpaper.jpg" alt="wallpapers" width="360" height="300" class="portfolio-card-img" />
-            <h2 class="portfolio-card-header">Screen Illustrations</h2>
-            <p class="portfolio-card-text">Design</p>
-          </a>
-          <a href="" class="portfolio-card link">
-            <img src="./images/3.portfolio/img-6-online-courses.jpg" alt="online courses" width="360" height="300" class="portfolio-card-img" />
-            <h2 class="portfolio-card-header">Online Courses</h2>
-            <p class="portfolio-card-text">Marketing</p>
-          </a>
-          <a href="" class="portfolio-card link">
-            <img src="./images/3.portfolio/img-7-instagram-stories.jpg" alt="instagram stories" width="360" height="300" class="portfolio-card-img" />
-            <h2 class="portfolio-card-header">Instagram Stories Concept</h2>
-            <p class="portfolio-card-text">Design</p>
-          </a>
-          <a href="" class="portfolio-card link">
-            <img src="./images/3.portfolio/img-8-website-food.jpg" alt="website organik food" width="360" height="300" class="portfolio-card-img" />
-            <h2 class="portfolio-card-header">Organic Food</h2>
-            <p class="portfolio-card-text">Web Site</p>
-          </a>
-          <a href="" class="portfolio-card link">
-            <img src="./images/3.portfolio/img-9-website-coffee.jpg" alt="website coffee" width="360" height="300" class="portfolio-card-img" />
-            <h2 class="portfolio-card-header">Fresh Coffee</h2>
-            <p class="portfolio-card-text">Web Site</p>
-          </a>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-card link">
+              <img src="./images/3.portfolio/img-1-bank-app.jpg" alt="bank app" width="360" height="300" class="portfolio-card-img" />
+              <h2 class="portfolio-card-header">Banking App Interface Concept</h2>
+              <p class="portfolio-card-text">App</p>
+            </a>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-card link">
+              <img src="./images/3.portfolio/img-2-cashless-payment.jpg" alt="appication for cashless payment" width="360" height="300" class="portfolio-card-img" />
+              <h2 class="portfolio-card-header">Cashless Payment</h2>
+              <p class="portfolio-card-text">Marketing</p>
+            </a>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-card link">
+              <img src="./images/3.portfolio/img-3-meditation-app.jpg" alt="meditation app" width="360" height="300" class="portfolio-card-img" />
+              <h2 class="portfolio-card-header">Meditation App</h2>
+              <p class="portfolio-card-text">App</p>
+            </a>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-card link">
+              <img src="./images/3.portfolio/img-4-taxi-app.jpg" alt="taxi app" width="360" height="300" class="portfolio-card-img" />
+              <h2 class="portfolio-card-header">Taxi Service</h2>
+              <p class="portfolio-card-text">Marketing</p>
+            </a>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-card link">
+              <img src="./images/3.portfolio/img-5-wallpaper.jpg" alt="wallpapers" width="360" height="300" class="portfolio-card-img" />
+              <h2 class="portfolio-card-header">Screen Illustrations</h2>
+              <p class="portfolio-card-text">Design</p>
+            </a>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-card link">
+              <img src="./images/3.portfolio/img-6-online-courses.jpg" alt="online courses" width="360" height="300" class="portfolio-card-img" />
+              <h2 class="portfolio-card-header">Online Courses</h2>
+              <p class="portfolio-card-text">Marketing</p>
+            </a>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-card link">
+              <img src="./images/3.portfolio/img-7-instagram-stories.jpg" alt="instagram stories" width="360" height="300" class="portfolio-card-img" />
+              <h2 class="portfolio-card-header">Instagram Stories Concept</h2>
+              <p class="portfolio-card-text">Design</p>
+            </a>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-card link">
+              <img src="./images/3.portfolio/img-8-website-food.jpg" alt="website organik food" width="360" height="300" class="portfolio-card-img" />
+              <h2 class="portfolio-card-header">Organic Food</h2>
+              <p class="portfolio-card-text">Web Site</p>
+            </a>
+          </li>
+          <li class="portfolio-list-item">
+            <a href="" class="portfolio-card link">
+              <img src="./images/3.portfolio/img-9-website-coffee.jpg" alt="website coffee" width="360" height="300" class="portfolio-card-img" />
+              <h2 class="portfolio-card-header">Fresh Coffee</h2>
+              <p class="portfolio-card-text">Web Site</p>
+            </a>
+          </li>
         </ul>
       </section>
       <!-- /PORTFOLIO -->
